added py script

--- a/TrailCamFilter.ipynb
+++ b/TrailCamFilter.ipynb
@@ -340,7 +340,8 @@
      "text": [
       "Train on 186 samples, validate on 187 samples\n",
       "Epoch 1/10\n",
-      "100/186 [===============>..............] - ETA: 3:06 - loss: 2.5648 - acc: 0.8400"
+      "186/186 [==============================] - 552s 3s/step - loss: 2.7579 - acc: 0.8280 - val_loss: 2.7431 - val_acc: 0.8289\n",
+      "Epoch 2/10\n"
      ]
     }
    ],
