fixed more things

--- a/Deer Classifier.ipynb
+++ b/Deer Classifier.ipynb
@@ -180,16 +180,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from keras import models\n",
+    "from keras import layers\n",
     "vgg_conv = VGG16(weights = 'imagenet',\n",
-    "                include_top=True,\n",
+    "                include_top=False,\n",
     "                input_shape=(224,224,3))\n",
-    "x = Dense(2, activation='sigmoid', name='predictions')(vgg_conv.layers[-2].output)\n",
-    "my_model = keras.Model(inputs=vgg_conv.input, outputs=x)\n",
-    "my_model.compile(loss=keras.losses.binary_crossentropy, optimizer=\"adam\", metrics=[\"accuracy\"])"
+    "for layer in vgg_conv.layers[:-4]:\n",
+    "    layer.trainable = False\n",
+    "\n",
+    "model = models.Sequential()\n",
+    "model.add(vgg_conv)\n",
+    "model.add(layers.Flatten())\n",
+    "model.add(layers.Dense(1024, activation='relu'))\n",
+    "model.add(layers.Dropout(0.5))\n",
+    "model.add(layers.Dense(2, activation='softmax'))\n",
+    "\n",
+    "#x = Dense(2, activation='sigmoid', name='predictions')(vgg_conv.layers[-2].output)\n",
+    "\n",
+    "model.compile(loss=keras.losses.binary_crossentropy, optimizer=\"adam\", metrics=[\"accuracy\"])"
    ]
   },
   {
@@ -203,9 +215,7 @@
      "text": [
       "Train on 186 samples, validate on 187 samples\n",
       "Epoch 1/10\n",
-      "186/186 [==============================] - 851s 5s/step - loss: 2.6721 - acc: 0.8333 - val_loss: 2.8289 - val_acc: 0.8235\n",
-      "Epoch 2/10\n",
-      " 88/186 [=============>................] - ETA: 6:14 - loss: 2.7324 - acc: 0.8295"
+      " 19/186 [==>...........................] - ETA: 3:10 - loss: 3.0546 - acc: 0.7895"
      ]
     }
    ],
@@ -214,7 +224,7 @@
     "batch_size = 1\n",
     "num_epoch = 10\n",
     "#model training\n",
-    "model_log = my_model.fit(train_images,train_labels,\n",
+    "model_log = model.fit(train_images,train_labels,\n",
     "          batch_size=batch_size,\n",
     "          epochs=num_epoch,\n",
     "          verbose=1,\n",
